Feature: Extract appium template with automated BDD test using gradle
- Use gradle in a multi-project setup
- Use gradle to pull down some example dependencies
- Use git for versioning the manifest through the use of tags
- Add simple Android application with two screens
- Add example android activity unit test
- Add example appium test
- Add cucumber BDD test that uses appium

--- a/android_app/.gitignore
+++ b/android_app/.gitignore
@@ -39,6 +39,9 @@ Thumbs.db
 
 # Project related files #
 #########################
+libs/**
+bin/**
+gen/**
 build/**
 build.properties
 local.properties
@@ -52,4 +55,4 @@ gradle.properties
 .classpath
 .loadpath
 .ant-targets-build.xml
-*.iml
+track.iml
